frontend/test/should_fail/defYield_003e.grg
using defYield;

test t
{
	def -x:EE->;
	pp:p(yield x);
}

pattern p(def -x:E1->)
{
	-y:E1->;
	yield { yield x = y; }
}

